--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.6
+minecraft_version=1.21.9-rc1
 loader_version=0.16.14
 
 # Mod Properties
-mod_version=1.0.2
+mod_version=1.0.3
 maven_group=de.tomalbrc
 archives_base_name=bedrock-cauldrons
 
 # Dependencies
-fabric_version=0.127.0+1.21.6
-polymer_version=0.13.1+1.21.6
+fabric_version=0.133.13+1.21.9
+polymer_version=0.14.0-rc.1+1.21.9-rc1
